just minor fixs (gaps)

--- a/style.css
+++ b/style.css
@@ -97,11 +97,11 @@ a:link {
     font-size: 48px;
     font-weight: bolder;
     line-height: 1.2;
-    text-align: justify;    
+    text-align:justify;    
 }
 
 .header img {
-    max-width: 400px;
+    max-width: 100%;
     margin: 50px;
     
  }
@@ -226,31 +226,31 @@ a:link {
  }
 
 
-.singup {
+.signup {
     background: #ffffff;
-    padding: 100px ;
+    padding: 100px  ;
     
 }
 
-.singup .container{
+.signup .container{
     background: #0380fd;
-    padding: 50px;
+    padding: 100px 50px;
     border-radius: 10px;
-   display: flex;
+    display: flex;
     flex-direction: row;
     justify-content:space-between;
     align-content: center;
-    max-height: 200px;
+    /* max-height: 200px; */
  
     
 }
 
-.singup .p1 {
-    font-display: 1;
+.signup .p1 {
+    font-size: 18px;
     font-weight: bolder;
     color: #fff;
     }
-.singup .p2 {
+.signup .p2 {
     font-display:1;
     font-weight:lighter;
     color: #fff;
@@ -273,15 +273,14 @@ a:link {
 }
     
 
-@media (max-width: 400px) {
-    .container {
+@media (max-width:480px) {
+    .header .container {
         flex-direction: column;
         padding-top: 20px;
         text-align: center;
     }
-
+    
 }
-
 
 .footer {
     left: 0;
